src/main/java/dmp40j/bindings/TLDFM_64Library.java

	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_get_device_count(@org.bridj.ann.CLong long instrumentHandle, @Ptr long pDeviceCount);
	/**
	 * Original signature : <code>ViStatus TLDFM_get_device_information(ViSession, ViUInt32, ViChar[], ViChar[], ViChar[], ViBoolean*, ViChar[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:8</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_get_device_information(@org.bridj.ann.CLong long instrumentHandle, @org.bridj.ann.CLong long deviceIndex, Pointer<Byte > manufacturer, Pointer<Byte > instrumentName, Pointer<Byte > serialNumber, Pointer<Short > pDeviceAvailable, Pointer<Byte > resourceName) {
		return TLDFM_get_device_information(instrumentHandle, deviceIndex, Pointer.getPeer(manufacturer), Pointer.getPeer(instrumentName), Pointer.getPeer(serialNumber), Pointer.getPeer(pDeviceAvailable), Pointer.getPeer(resourceName));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_get_device_information(@org.bridj.ann.CLong long instrumentHandle, @org.bridj.ann.CLong long deviceIndex, @Ptr long manufacturer, @Ptr long instrumentName, @Ptr long serialNumber, @Ptr long pDeviceAvailable, @Ptr long resourceName);
	/**
	 * required VXIpnp instrument driver functions<br>
	 * Original signature : <code>ViStatus TLDFM_init(ViRsrc, ViBoolean, ViBoolean, ViSession*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:19</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_init(Pointer<Byte > resourceName, short IDQuery, short resetDevice, Pointer<org.bridj.CLong > pInstrumentHandle) {
		return TLDFM_init(Pointer.getPeer(resourceName), IDQuery, resetDevice, Pointer.getPeer(pInstrumentHandle));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_init(@Ptr long resourceName, short IDQuery, short resetDevice, @Ptr long pInstrumentHandle);
	/**
	 * Original signature : <code>ViStatus TLDFM_close(ViSession)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:24</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static native long TLDFM_close(@org.bridj.ann.CLong long instrumentHandle);
	/**
	 * Original signature : <code>ViStatus TLDFM_reset(ViSession)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:26</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static native long TLDFM_reset(@org.bridj.ann.CLong long instrumentHandle);
	/**
	 * Original signature : <code>ViStatus TLDFM_self_test(ViSession, ViInt16*, ViChar[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:28</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_self_test(@org.bridj.ann.CLong long instrumentHandle, Pointer<Short > pSelfTestResult, Pointer<Byte > selfTestMessage) {
		return TLDFM_self_test(instrumentHandle, Pointer.getPeer(pSelfTestResult), Pointer.getPeer(selfTestMessage));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_self_test(@org.bridj.ann.CLong long instrumentHandle, @Ptr long pSelfTestResult, @Ptr long selfTestMessage);
	/**
	 * Original signature : <code>ViStatus TLDFM_error_query(ViSession, ViInt32*, ViChar[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:32</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_error_query(@org.bridj.ann.CLong long instrumentHandle, Pointer<org.bridj.CLong > pErrorCode, Pointer<Byte > errorMessage) {
		return TLDFM_error_query(instrumentHandle, Pointer.getPeer(pErrorCode), Pointer.getPeer(errorMessage));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_error_query(@org.bridj.ann.CLong long instrumentHandle, @Ptr long pErrorCode, @Ptr long errorMessage);
	/**
	 * Original signature : <code>ViStatus TLDFM_error_message(ViSession, ViStatus, ViChar[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:36</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_error_message(@org.bridj.ann.CLong long instrumentHandle, @org.bridj.ann.CLong long errorCode, Pointer<Byte > errorMessage) {
		return TLDFM_error_message(instrumentHandle, errorCode, Pointer.getPeer(errorMessage));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_error_message(@org.bridj.ann.CLong long instrumentHandle, @org.bridj.ann.CLong long errorCode, @Ptr long errorMessage);
	/**
	 * Original signature : <code>ViStatus TLDFM_revision_query(ViSession, ViChar[], ViChar[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:40</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_revision_query(@org.bridj.ann.CLong long instrumentHandle, Pointer<Byte > driverRevision, Pointer<Byte > firmwareRevision) {
		return TLDFM_revision_query(instrumentHandle, Pointer.getPeer(driverRevision), Pointer.getPeer(firmwareRevision));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_revision_query(@org.bridj.ann.CLong long instrumentHandle, @Ptr long driverRevision, @Ptr long firmwareRevision);
	/**
	 * ******************************************************************************<br>
	 * Original signature : <code>ViStatus TLDFM_set_USB_access_mode(ViSession, TLDFM_Access_Mode, ViString, ViChar[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:46</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_set_USB_access_mode(@org.bridj.ann.CLong long instrumentHandle, IntValuedEnum<TLDFM_64Library.TLDFM_Access_Mode > accessMode, Pointer<Byte > requestedKey, Pointer<Byte > accessKey) {
		return TLDFM_set_USB_access_mode(instrumentHandle, (int)accessMode.value(), Pointer.getPeer(requestedKey), Pointer.getPeer(accessKey));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_set_USB_access_mode(@org.bridj.ann.CLong long instrumentHandle, int accessMode, @Ptr long requestedKey, @Ptr long accessKey);
	/**
	 * segment voltage functions<br>
	 * Original signature : <code>ViStatus TLDFM_get_segment_voltage(ViSession, ViUInt32, ViReal64*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:54</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_get_segment_voltage(@org.bridj.ann.CLong long instrumentHandle, @org.bridj.ann.CLong long segmentIndex, Pointer<Double > pSegmentVoltage) {
		return TLDFM_get_segment_voltage(instrumentHandle, segmentIndex, Pointer.getPeer(pSegmentVoltage));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_get_segment_voltage(@org.bridj.ann.CLong long instrumentHandle, @org.bridj.ann.CLong long segmentIndex, @Ptr long pSegmentVoltage);
	/**
	 * Original signature : <code>ViStatus TLDFM_set_segment_voltage(ViSession, ViUInt32, ViReal64)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:58</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static native long TLDFM_set_segment_voltage(@org.bridj.ann.CLong long instrumentHandle, @org.bridj.ann.CLong long segmentIndex, double segmentVoltage);
	/**
	 * Original signature : <code>ViStatus TLDFM_get_segment_voltages(ViSession, ViReal64[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:62</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_get_segment_voltages(@org.bridj.ann.CLong long instrumentHandle, Pointer<Double > segmentVoltages) {
		return TLDFM_get_segment_voltages(instrumentHandle, Pointer.getPeer(segmentVoltages));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_get_segment_voltages(@org.bridj.ann.CLong long instrumentHandle, @Ptr long segmentVoltages);
	/**
	 * Original signature : <code>ViStatus TLDFM_set_segment_voltages(ViSession, ViReal64[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:65</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_set_segment_voltages(@org.bridj.ann.CLong long instrumentHandle, Pointer<Double > segmentVoltages) {
		return TLDFM_set_segment_voltages(instrumentHandle, Pointer.getPeer(segmentVoltages));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_set_segment_voltages(@org.bridj.ann.CLong long instrumentHandle, @Ptr long segmentVoltages);
	/**
	 * tilt element voltage functions<br>
	 * Original signature : <code>ViStatus TLDFM_get_tilt_voltage(ViSession, ViUInt32, ViReal64*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:71</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_get_tilt_voltage(@org.bridj.ann.CLong long instrumentHandle, @org.bridj.ann.CLong long tiltIndex, Pointer<Double > pTiltVoltage) {
		return TLDFM_get_tilt_voltage(instrumentHandle, tiltIndex, Pointer.getPeer(pTiltVoltage));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_get_tilt_voltage(@org.bridj.ann.CLong long instrumentHandle, @org.bridj.ann.CLong long tiltIndex, @Ptr long pTiltVoltage);
	/**
	 * Original signature : <code>ViStatus TLDFM_set_tilt_voltage(ViSession, ViUInt32, ViReal64)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:75</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static native long TLDFM_set_tilt_voltage(@org.bridj.ann.CLong long instrumentHandle, @org.bridj.ann.CLong long tiltIndex, double tiltVoltage);
	/**
	 * Original signature : <code>ViStatus TLDFM_get_tilt_voltages(ViSession, ViReal64[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:79</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_get_tilt_voltages(@org.bridj.ann.CLong long instrumentHandle, Pointer<Double > tiltVoltages) {
		return TLDFM_get_tilt_voltages(instrumentHandle, Pointer.getPeer(tiltVoltages));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_get_tilt_voltages(@org.bridj.ann.CLong long instrumentHandle, @Ptr long tiltVoltages);
	/**
	 * Original signature : <code>ViStatus TLDFM_set_tilt_voltages(ViSession, ViReal64[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:82</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_set_tilt_voltages(@org.bridj.ann.CLong long instrumentHandle, Pointer<Double > tiltVoltages) {
		return TLDFM_set_tilt_voltages(instrumentHandle, Pointer.getPeer(tiltVoltages));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_set_tilt_voltages(@org.bridj.ann.CLong long instrumentHandle, @Ptr long tiltVoltages);
	/**
	 * Original signature : <code>ViStatus TLDFM_set_tilt_amplitude_angle(ViSession, ViReal64, ViReal64)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:85</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static native long TLDFM_set_tilt_amplitude_angle(@org.bridj.ann.CLong long instrumentHandle, double amplitute, double angle);
